@@ -656,7 +656,7 @@
 ;
 ; An insn format field is a list of ifields that make up the instruction.
 ; All bits must be specified, including reserved bits
-; [at present no checking is made of this, but the rule still holds].
+; [at present little checking is made of this, but the rule still holds].
 ;
 ; A normal entry begins with `+' and then consist of the following:
 ; - operand name
@@ -719,6 +719,7 @@
 				     (not (ifld-beyond-base? f)))
 				   (ifields-simple-ifields parsed-ifld-list)))
 		 (base-iflds-length (apply + (map ifld-length base-iflds))))
+
 	    ;; FIXME: We don't use parse-error here because some existing ports
 	    ;; have problems, and I don't have time to fix them right now.
 	    (cond ((< base-iflds-length base-len)
@@ -737,6 +738,13 @@
 				   (pretty-print-iflds parsed-ifld-list)
 				   "\nprovided spec")
 				  ifld-list)))
+
+	    ;; Detect duplicate ifields.
+	    (if (!= (length base-iflds)
+		    (length (obj-list-nub base-iflds)))
+		(parse-error-continuable context
+					 "duplicate ifields present"
+					 ifld-list))
 	    )
 	  ))
 
